transacción atómica medianoche