@@ -6,6 +6,7 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -13,6 +14,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -37,13 +39,27 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             return;
         }
 
-        String subject = jwtService.extractSubject(token);
+        Long paseadorId = jwtService.extractPaseadorId(token);
+        Long tutorId = jwtService.extractTutorId(token);
 
-        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                subject,
-                null,
-                Collections.emptyList()
-        );
+        UsernamePasswordAuthenticationToken authentication;
+        if (paseadorId != null) {
+            authentication = new UsernamePasswordAuthenticationToken(
+                    paseadorId,
+                    null,
+                    List.of(new SimpleGrantedAuthority("ROLE_PASEADOR")));
+        } else if (tutorId != null) {
+            authentication = new UsernamePasswordAuthenticationToken(
+                    tutorId,
+                    null,
+                    List.of(new SimpleGrantedAuthority("ROLE_TUTOR")));
+        } else {
+            String subject = jwtService.extractSubject(token);
+            authentication = new UsernamePasswordAuthenticationToken(
+                    subject,
+                    null,
+                    Collections.emptyList());
+        }
         authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
         SecurityContextHolder.getContext().setAuthentication(authentication);
         filterChain.doFilter(request, response);
